--- a/boot-camp/note/April/22_04_07_Thu.md
+++ b/boot-camp/note/April/22_04_07_Thu.md
@@ -2,14 +2,63 @@
 
 ## _Node.js_
 
--
+- 데이터 수정/삭제 실습
+- dotenv 모듈 이용하여 MySQL DB 정보 감추기
+  - .env 파일 alias
+  - process.env.변수명
+  - 노드 프로세스 환경 추가 가능
+  - NODE_ENV 노드 환경 변수 값, app.get('env') 이용하여 <br/>
+    개발/운영 서버 분리해서 관리함
+- route 지정 방법
+  - 정규식 이용해서도 가능
+- route module
+- route alias
+  - post 하나로 get/post/put/delete 다 처리 가능
+- 알아서 node 서버 재시작 해주는 모듈
+  - nodemon
+    - 감시하고 싶은 폴더명, 파일
+    - `nodemon --watch mysql routes 13_route_module.js`
+- static
+  - 서버에 있는 자원을 브라우저에 오픈할 수 있도록 열어줌
+  - FE에서 이미지 볼 수 있음
+- multer
+  - 미들웨어 모듈
+  - 클라이언트에서 파일 업로드 했을 때 서버에서 받는 방법
+  - 클라이언트 -> 노드
+  - request body의 form-data 이용
+    - form-data는 form 태그 submit 처리 같은 것
+  - 활용) 이미지 업로드, 엑셀 파일 업로드, ...
+    - 제품, 재고 등 파일들이 한번에 여러 개가 넘어옴
+    - 엑셀로 관리되고 있는 데이터를 모두 DB에 넣고 싶음
+    - 엑셀 파일을 node 단에서 json 파일로 변환하고 싶을 때 사용 가능
+    - fs 모듈로 하기에는 쉽지 않음
+    - xlsx 모듈 이용 가능
+- morgan
+  - 미들웨어 모듈 중 하나 (익스프레스)
+  - 시스템에서 발생하는 다양한 로그 (각종 정보) 관리 위한 모듈
+  - info level, error level, warning level 등을 파일로 관리함
+  - 사용자 에러가 있는 경우만 로그를 남기고 싶으면, <br/>
+    `app.use( morgan('combined', { stream: accessLogStream, skip: function (req, res) { return res.statusCode < 400; }, }) );`
+- rotating-file-stream
+  - 최근 30일을 일자별로 로그 기록해서 관리할 수도 있음
+  - 30분 단위로 로그 파일을 만들 수도 있음
+  - 이 모듈을 이용하여 나중에 자동으로 지정한 날짜, 로그 파일 사이즈 등에 대한 새로운 로그 파일 만들어 주는 것에 활용 가능
+- winston
+  - 로그 관리 모듈
+- nodemailer
+  - 이메일 보내는 기능을 해주는 모듈
 
 #
 
 ### [Note]
 
--
+- sequelize 주니어 개발자에게 권장 x
+  - ORM (Object Relational Mapping)
+  - 함수 호출하듯이 쿼리 실행 가능 (JS Object - Relation/table)
+  - 많은 코드 작성해야 함
+- 개발 단계에서만 사용하는 모듈은 --save-dev로 설치
+- 시스템 운영 및 관리 위해서 로그 기록은 필수!!!
 
 #
 
-### [Source Code](https://github.com/ding-co/developer-dignity/tree/main/boot-camp/practice/April/day32)
+### [Source Code](https://github.com/ding-co/developer-dignity/tree/main/boot-camp/practice/April/day31)
