--- a/boot-camp/note/April/22_04_12_Tue.md
+++ b/boot-camp/note/April/22_04_12_Tue.md
@@ -2,14 +2,40 @@
 
 ## _Node.js_
 
--
+- nodemailer
+  - gmail 앱 비밀번호 설정
+- 이메일 발송 관련 실습
+  - .ics 파일 확장자 이용
+    - 일정들을 자동으로 스마트폰 캘린더에 등록 가능
+  - app file download
+    - 파일 조작할 때는 예상치 못한 경우 많이 발생 가능 => try-catch 구문 사용
+  - express-session
+    - cookie-parser 모듈
+- 크롤링 (특정 웹사이트 데이터 추출) 실습
+  - 인프런
+    - axios
+    - cheerio
+      - 정규식 이용해서 원하는 데이터 추출할 수 있지만 너무 어려워짐
+      - 치명적 단점: 완벽하게 찾아내지는 못함 (클래스명 2개 이상일 때, ...)
+  - jobkorea
 
 #
 
 ### [Note]
 
--
+- app.all()
+  - 모든 http 메소드 아우름
+  - next() 이용
+- jwt 토큰 방식
+- encodeURI (한글 인코딩)
+- 내일 job scheduler 실습 예정
+  - (+ crawling -> json 정보를 excel 파일로 만들어서 메일로 첨부, 1시간마다 개인 메일로 오도록 설정)
+    - HTML 테이블 형태로 보낼 수도 있음
+  - 크롤링하면서 제품 가격 변동 사항 확인 가능
+  - 특정 시간마다 크롤링 돌림
+- 크롤링 잘하기 위해서는 결국 소스 뜯어봐야 함
+- node-html-parser 가 cheerio 보다 더 많은 기능 가지고 있음
 
 #
 
-### [Source Code](https://github.com/ding-co/developer-dignity/tree/main/boot-camp/practice/April/day33)
+### [Source Code](https://github.com/ding-co/developer-dignity/tree/main/boot-camp/practice/April/day31)
